methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:43: error: illegal start of simple expression
    for(j<- 0 to 3);
                   ^