methods.picture.PatternPicture.scala.code
override def run() {
 ligne();
  changeLigne();
  ligne();
}  
  def diagD(c:Color){
    selectBrushColor(c);
    left();
    forward();
    brushDown();
    brushUp();
    right();
    forward();
    right();
    forward();
    brushDown();
    brushUp();
  }
def diagG(c:Color){
  selectBrushColor(c)
  left();
  forward();
  brushDown();
  brushUp();
  left();
  forward();
  right();
  forward();
  brushDown();
  brushUp();
}
def carr?(){
  diagD(Color.RED);
  diagG(Color.BLUE);
  diagD(Color.GREEN);
  diagG(color.YELLOW)
  forward();
  forward();
}
def ligne(){
  for(i<-0 to 1){
    carr?();
    for(j<- 0 to 3);
    forward()
  }
}
def changeLigne(){
  left();
  for(k<-0 to 3){
    forward()
  }
}